--- a/public/422.html
+++ b/public/422.html
@@ -1,67 +1,181 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The change you wanted was rejected (422)</title>
+  <title>422 - Você não tem acesso a esta página</title>
+  <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;600;700;800&display=swap" rel="stylesheet">
   <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
+    *, *:before, *:after {
+      box-sizing: border-box;
+    }
 
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
+    *, html, body {
+      outline: none;
+      border: none;
+      margin: 0;
+      padding: 0;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      backface-visibility: hidden;
+      -webkit-backface-visibility: hidden;
+      text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+      font-family: 'Montserrat';
+      color: $secondary-color;
+    }
 
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    html, body {
+      width: 100%;
+      height: 100%;
+      position: relative;
+    }
 
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
+    strong {
+      font-weight: 600;
+    }
 
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    a {
+      color: #0b0e42;
+      text-decoration: none;
+    }
+
+    *::-webkit-scrollbar {
+      width: 15px;
+      height: 15px;
+    }
+
+    *::-webkit-scrollbar-thumb {
+      border-radius: 100px;
+      border: 5px solid transparent;
+      background-clip: content-box;
+      background-color: rgba($dark-blue, .75);
+    }
+
+    *::-webkit-scrollbar-track {
+      background-color: #e4e4e4;
+      border-radius: 100px;
+    }
+
+    ::-webkit-input-placeholder {
+      font-style: italic;
+      color: rgba($secondary-color, .5);
+    }
+
+    :-moz-placeholder {
+      font-style: italic;
+      color: rgba($secondary-color, .5);
+    }
+
+    ::-moz-placeholder {
+      font-style: italic;
+      color: rgba($secondary-color, .5);
+    }
+
+    :-ms-input-placeholder {
+      font-style: italic;
+      color: rgba($secondary-color, .5);
+    }
+
+    .main {
+      overflow-y: auto;
+      width: 100%;
+      height: 100%;
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: #1f1f1f;
+      padding: 25px;
+    }
+
+    .main:before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-image: url("errors/422-t.png");
+      background-size: 70%;
+      background-position: 25% 60%;
+      background-repeat: no-repeat;
+      opacity: .5;
+    }
+
+    .main section {
+      position: relative;
+      left: 10%;
+      top: 10%;
+      text-align: right;
+    }
+
+    .main section h1 {
+      font-size: 10vw;
+      font-size: min(max(64px, 10vw), 124px);
+      color: white;
+      text-shadow: 5px 5px 1px rgba(0,0,0,1);
+    }
+
+    .main section p {
+      text-shadow: 1px 1px 1px rgba(0,0,0,1);
+      font-size: 2.5vw;
+      font-size: min(max(20px, 2vw), 64px);
+      font-weight: 600;
+      text-transform: uppercase;
+      margin-bottom: 15px;
+      color: white;
+      max-width: 425px;
+    } 
+
+    .main section a {
+      font-size: min(max(10px, 1vw), 24px);
+    }
+
+    .btn {
+      padding: 12px 18px;
+      text-align: left;
+      text-transform: uppercase;
+      border: none;
+      cursor: pointer;
+      display: inline-block;
+      color: #000;
+      background-color: #fff;
+      font-size: 1em;
+      font-family: 'Montserrat';
+      font-weight: 600;
+      border-radius: 5px;
+      min-width: 120px;
+      box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+      background-clip: padding-box;
+      white-space: nowrap;
+    }
+
+    @media only screen and (max-width: 575px){
+      .main section {
+        left: 0;
+        top: -15%;
+        text-align: left;
+      }
+
+      .main:before {
+        background-size: 100%;
+        background-position: center 60%;
+      }
+    }
   </style>
 </head>
 
-<body class="rails-default-error-page">
-  <!-- This file lives in public/422.html -->
-  <div class="dialog">
-    <div>
-      <h1>The change you wanted was rejected.</h1>
-      <p>Maybe you tried to change something you didn't have access to.</p>
-    </div>
-    <p>If you are the application owner check the logs for more information.</p>
+<body class="422-error-page">
+  <div class="main">
+    <section>
+      <h1>422</h1>
+
+      <p>Você não tem permissão para acessar esta página</p>
+
+      <a href="/" class="btn">Que tal voltar à página inicial?</a>
+    </section>
   </div>
 </body>
 </html>
