changed errors pages url

--- a/public/500.html
+++ b/public/500.html
@@ -97,7 +97,7 @@
       top: 0;
       width: 100%;
       height: 100%;
-      background-image: url("errors/500-t.png");
+      background-image: url("/500-t.png");
       background-size: 70%;
       background-position: 5% 60%;
       background-repeat: no-repeat;
