--- a/public/404.html
+++ b/public/404.html
@@ -97,7 +97,7 @@
       top: 0;
       width: 100%;
       height: 100%;
-      background-image: url("errors/404-t.png");
+      background-image: url("/404-t.png");
       background-size: 70%;
       background-position: center 70%;
       background-repeat: no-repeat;
