--- a/public/422.html
+++ b/public/422.html
@@ -97,7 +97,7 @@
       top: 0;
       width: 100%;
       height: 100%;
-      background-image: url("errors/422-t.png");
+      background-image: url("/422-t.png");
       background-size: 70%;
       background-position: 25% 60%;
       background-repeat: no-repeat;
